--- a/src/app/landing page styles/team.module.css
+++ b/src/app/landing page styles/team.module.css
@@ -142,7 +142,6 @@
 }
 
 .teamMember:has(a):hover {
-    transform: translateY(-3px);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
